--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "db:deploy": "prisma migrate deploy",
     "job-queue:start": "npx ts-node src/scripts/start-job-queue.ts",
     "job-queue:dev": "npx ts-node --watch src/scripts/start-job-queue.ts",
-    "postbuild": "prisma generate",
-    "postinstall": "prisma generate"
+    "postbuild": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -41,6 +40,7 @@
     "clsx": "^2.1.1",
     "eslint": "^9.31.0",
     "eslint-config-next": "^15.3.5",
+    "form-data": "^4.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
@@ -52,25 +52,19 @@
     "pdf-parse": "^1.1.4",
     "postcss": "^8.5.6",
     "prisma": "^6.11.1",
+    "puppeteer": "^21.0.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
-    "puppeteer": "^21.0.0",
     "zod": "^3.23.8"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
-  },
-  "peerDependencies": {
-    "puppeteer": "^21.0.0"
-  },
-  "peerDependenciesMeta": {
-    "puppeteer": {
-      "optional": true
-    }
   }
 }
