fixed bugs and added features

--- a/.env.example
+++ b/.env.example
@@ -28,5 +28,10 @@ AWS_REGION="us-east-1"
 # Get your key at: https://rapidapi.com/letscrape-6bRBa3QguO5/api/jsearch
 JSEARCH_API_KEY="your-rapidapi-key-here"
 
+# Stripe (for subscription billing)
+# Get these from your Stripe Dashboard at https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY="sk_test_..."  # Use sk_live_... for production
+STRIPE_WEBHOOK_SECRET="whsec_..." # From Stripe webhook endpoint configuration
+
 # Optional: Development settings
 NODE_ENV="development"
