--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "stripe": "^20.1.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3",
     "zod": "^3.23.8"
   },
@@ -73,7 +74,15 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "devDependencies": {
-    "tsx": "^4.21.0"
+  "devDependencies": {},
+  "nixpacks": {
+    "phases": {
+      "install": {
+        "cmds": ["npm ci"]
+      },
+      "build": {
+        "cmds": ["npm run build"]
+      }
+    }
   }
 }
